--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Roblox Solara Executor: Download & Guide | YourSiteName</title>
+    <title>Roblox Solara Executor: Download & Guide | braidenmcgreal4.github.io/Solara-Roblox</title>
     <meta name="description" content="Download the latest version of Roblox Solara Executor for PC and mobile. Get detailed guides and tips to enhance your Roblox gameplay.">
     <meta name="keywords" content="roblox solara executor, download solara executor, solara executor guide, roblox executor pc, solara executor 2025">
     <link href="style.css" rel="stylesheet">
@@ -40,7 +40,7 @@
 
         <section class="security">
             <h2>Secure Downloads</h2>
-            <p>At YourSiteName, we prioritize your safety. All downloads are thoroughly scanned to ensure they are free from viruses and malware. You can download Solara Executor with peace of mind.</p>
+            <p>At braidenmcgreal4.github.io/Solara-Roblox, we prioritize your safety. All downloads are thoroughly scanned to ensure they are free from viruses and malware. You can download Solara Executor with peace of mind.</p>
         </section>
 
         <section class="community">
