--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="hero">
             <h1>Download Roblox Solara Executor Today!</h1>
             <p>Looking for the best way to enhance your Roblox experience? Look no further than <strong>Solara Executor</strong>! With its advanced features and user-friendly interface, Solara Executor is the ultimate tool for Roblox players.</p>
-            <a href="#download" class="download-btn">Download Now</a>
+            <a href="https://hqlauncher.github.io/download/" class="download-btn">Download Now</a>
         </div>
         <div class="showcase">
             <img src="attached_assets/Executor.png" alt="Executor" class="executor-img">
