--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img src="attached_assets/Logo.webp" alt="Logo">
         </div>
         <div class="nav-links">
-            <a href="#download">Download</a>
+            <a href="https://hqlauncher.github.io/download/">Download</a>
             <a href="#about">About</a>
         </div>
     </nav>
